udf/aws_microk8s/ingress_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  ports:
    - name: http
      nodePort: 31970
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      nodePort: 30820
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    name: nginx-ingress-microk8s
  type: NodePort
